[package]
name = "peckish"
version = "0.0.7"
description = "Create, manipulate, and transform Linux package formats!"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "filesystem"]
keywords = ["packages", "linux", "deb", "tarball", "docker"]

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-trait = "0.1.73"
bollard = { git = "https://github.com/queer/bollard", rev = "2624ced" }
clap = { version = "4.4.3", features = ["derive"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
ctor = "0.2.4"
disk-drive = "0.1.10"
eyre = "0.6.8"
flail = "0.3.0"
flop = "0.2.4"
floppy-disk = "0.2.6"
futures-util = "0.3.28"
hyper = "0.14.27"
indoc = "2.0.4"
itertools = "0.11.0"
md5 = "0.7.0"
nyoom = "0.3.5"
oci-spec = "0.6.2"
rand = "0.8.5"
regex = "1.9.5"
rpm = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
smoosh = "0.2.1"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json", "tracing", "env-filter", "fmt", "std"] }

[profile.release]
# debug = true
opt-level = 3
lto = true
