[package]
name = "peckish"
version = "0.0.8"
description = "Create, manipulate, and transform Linux package formats!"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "filesystem"]
keywords = ["packages", "linux", "deb", "tarball", "docker"]
repository = "https://github.com/queer/peckish"
homepage = "https://github.com/queer/peckish"

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.0.5"
async-trait = "0.1.77"
bollard = "0.16.0"
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = { version = "0.6.2", features = ["issue-url"] }
ctor = "0.2.7"
disk-drive = "0.1.10"
eyre = "0.6.12"
flail = "0.3.0"
flop = "0.2.4"
floppy-disk = "0.2.6"
futures-util = "0.3.30"
hyper = { version = "0.14.27", features = ["stream"] }
indoc = "2.0.4"
itertools = "0.12.1"
md5 = "0.7.0"
nyoom = "0.3.5"
oci-spec = "0.6.5"
rand = "0.8.5"
regex = "1.10.3"
rpm = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
sha2 = "0.10.8"
smoosh = "0.2.1"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "serde",
  "serde_json",
  "tracing",
  "env-filter",
  "fmt",
  "std",
] }

[profile.release]
# debug = true
opt-level = 3
lto = true
